--- a/index.html
+++ b/index.html
@@ -25,44 +25,52 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
+
                 <div class="numbertext">
+
                     NEW GENERATION OF <br>SKATING
 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque esse ex distinctio fuga unde voluptatum quasi expedita ut odio nulla magni, rerum quam fugiat iste doloribus officia blanditiis dolorem excepturi.</p>
+
                 </div>
 
                 <img src="./assets/hero_2.jpg.webp" style="width:100vw;">
 
                 <div class="text"> <button class="btn-one">Get in touch</button> </div>
+
             </div>
 
 
             <div class="mySlides fade">
+
                 <div class="numbertext">
+
                     HI I'M JOHN AND I <br>SKATE A LOT
 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque esse ex distinctio fuga unde voluptatum quasi expedita ut odio nulla magni, rerum quam fugiat iste doloribus officia blanditiis dolorem excepturi.</p>
+
                 </div>
 
                 <img src="./assets/hero_3.jpg.webp" style="width:100vw;">
 
                 <div class="text"> <button class="btn-one">Get in touch</button> </div>
+
             </div>
 
 
             <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)"> &#10094; </a>
-            <a class="next" onclick="plusSlides(1)"> &#10095; </a>
+            <!-- <a class="prev" onclick="plusSlides(-1)"> &#10094; </a>
+            <a class="next" onclick="plusSlides(1)"> &#10095; </a> -->
 
         </div>
 
-        <br>
+        <!-- <br> -->
 
         <!-- The dots/circles -->
-        <div style="text-align:center">
+        <!-- <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
-        </div>
+        </div> -->
 
 
         <nav id="nav-bar">
@@ -81,6 +89,22 @@
         </nav>
 
     </header>
+
+
+
+    <section class="sections">
+
+        <div id="services-container">
+
+            <span id="services">SERVICES</span>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eius nihil eveniet aut molestiae repellendus adipisci placeat iste corrupti. Impedit, mollitia unde earum quisquam veniam laudantium dolor possimus animi maiores.
+            </p>
+
+        </div>
+
+    </section>
 
 </body>
 
