Added 'Services' grid

--- a/index.html
+++ b/index.html
@@ -104,6 +104,71 @@
 
         </div>
 
+
+        <div id="parent-grid">
+
+            <div class="cards">
+
+                <div class="avatars"></div>
+
+                <span class="card-headings">PERSONAL TRAINING</span>
+
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit sunt voluptate amet facilis natus cum, exercitationem, assumenda commodi tempore quaerat odio, ipsum iusto dolor! Iure eum esse eveniet vero!</P>
+                
+            </div>
+            
+            <div class="cards">
+
+                <div class="avatars"></div>
+
+                <span class="card-headings">PERSONAL TRAINING</span>
+
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit sunt voluptate amet facilis natus cum, exercitationem, assumenda commodi tempore quaerat odio, ipsum iusto dolor! Iure eum esse eveniet vero!</P>
+
+            </div>
+
+            <div class="cards">
+
+                <div class="avatars"></div>
+
+                <span class="card-headings">PERSONAL TRAINING</span>
+
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit sunt voluptate amet facilis natus cum, exercitationem, assumenda commodi tempore quaerat odio, ipsum iusto dolor! Iure eum esse eveniet vero!</P>
+
+            </div>
+
+            <div class="cards">
+
+                <div class="avatars"></div>
+
+                <span class="card-headings">PERSONAL TRAINING</span>
+
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit sunt voluptate amet facilis natus cum, exercitationem, assumenda commodi tempore quaerat odio, ipsum iusto dolor! Iure eum esse eveniet vero!</P>
+
+            </div>
+
+            <div class="cards">
+
+                <div class="avatars"></div>
+
+                <span class="card-headings">PERSONAL TRAINING</span>
+
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit sunt voluptate amet facilis natus cum, exercitationem, assumenda commodi tempore quaerat odio, ipsum iusto dolor! Iure eum esse eveniet vero!</P>
+
+            </div>
+
+            <div class="cards">
+
+                <div class="avatars"></div>
+
+                <span class="card-headings">PERSONAL TRAINING</span>
+
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit sunt voluptate amet facilis natus cum, exercitationem, assumenda commodi tempore quaerat odio, ipsum iusto dolor! Iure eum esse eveniet vero!</P>
+
+            </div>
+
+        </div>
+
     </section>
 
 </body>
